external-crates/move/crates/move-compiler/tests/move_2024/matching/field_order_counterexample.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/field_order_counterexample.move:8:12
  │
8 │     match (e) {
  │            ^ Pattern 'E::V { zero: _0, one: _ }' not covered
  │
  = When '_0' is not 0
